restart button works

--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
     <h1>Tic-Tac-Toe</h1>
 <div class="game-container">
     <div class="tic-tac-toe">
+
     </div>
+    <button class="restart">Restart</button>
+
 </div>
+
+<div id="overlay">
+    <div id="message">Congratulations, you have won the game!</div>
+  </div>
+
+
 
 
 
