basic game finished but it needs works

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 <div id="overlay">
     <div id="message">Congratulations, you have won the game!</div>
   </div>
+  <div id="overlay2">
+    <div id="message">Sorry, the computer won the game!</div>
+  </div>
 
 
 
