game works better

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   <div id="overlay2">
     <div id="message">Sorry, the computer won the game!</div>
   </div>
+  <!-- <div id="overlay3">
+    <div id="message">It's a draw</div>
+  </div> -->
 
 
 
